# dexofriend

./: .gitignore  README.md  lambda_function.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  staging.yml
commands/: commands-dev.json  commands.json
dexobot/: bot.py  command_types.py  commands.py  helper.py  metadata.py  roles.py
dexobot/data/: stars.json
scripts/: publish_commands-dev.py  publish_commands.py
